fix fit issues on collapse

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,7 +69,7 @@ body {
   color: rgb(17, 17, 17);
   border: none;
   box-shadow: 6px 7px 15px rgba(0, 0, 0, 0.742);
-  transition: .7s;
+  /* transition: .7s; */
   margin-left: 10px;
   margin-bottom: 10px;
 }
